<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boring.duanqifeng.tku.Danxuan">

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />



    <CheckBox
        android:id="@+id/A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t10001"
        android:layout_marginBottom="7dp"
        android:layout_above="@+id/B"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t10002"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <CheckBox
        android:id="@+id/C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t10003"
        android:layout_below="@+id/B"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="D6"
        android:layout_below="@+id/C"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="D5"
        android:layout_below="@+id/D"
        android:layout_alignParentStart="true" />
    <CheckBox
        android:id="@+id/F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t10004"
        android:layout_below="@+id/E"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="50sp"
        android:layout_marginBottom="9dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
