<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boring.duanqifeng.tku.Danxuan">

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp">

        <RadioButton
            android:id="@+id/A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t10001" />

        <RadioButton
            android:id="@+id/B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t10002" />
        <RadioButton
            android:id="@+id/C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t10003"/>
        <RadioButton
            android:id="@+id/D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t10004"/>

    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="50sp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/saveJD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:text="保存进度"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/clearJD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saveJD"
        android:text="清除进度" />

    <Button
        android:id="@+id/suiJi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearJD"
        android:layout_centerHorizontal="true"
        android:text="是否随机出题" />


</RelativeLayout>
